Califico las exposiciones de la semana anterior; vinculo las que he recibido para esta semana

--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -17,13 +17,13 @@
   |            |                                                                                               |                                                |          | Ejemplos:  [[./SalazarLuis-TepalHansel/Ejemplos/Ejemplo_Calculadora][1-Calculadora]], [[./SalazarLuis-TepalHansel/Ejemplos/Ejemplo_ChatSimple][2-Chat simple]], [[./SalazarLuis-TepalHansel/Ejemplos/Ejemplo_ChatConcurrente][3-Chat con concurrencia]], [[./SalazarLuis-TepalHansel/Ejemplos/Ejemplo_ChatSincro][4-Chat sincronizado]]           |                                              |
   | 2025.04.01 | Sistemas operativos para /edge computing/                                                     | Oscar Montiel y Samuel Torres                  | [[https://youtu.be/8sfBlBHC6vc][Ver aquí]] | [[./MontielJuarez-TorresSamuel/MontielOscar_TorresSamuel-Documentacion.pdf][Documentación]], [[MontielJuarez-TorresSamuel/MontielOscar_TorresSamuel-Presentacion.pdf][Presentación]]                                                                     | [[MontielJuarez-TorresSamuel/resultados_encuesta.pdf][Resultados de la encuesta]], [[MontielJuarez-TorresSamuel/evaluacion.org][Evaluación global]] |
   | 2025.04.01 | Comparación de rendimiento de ejecución de tareas en distintos sistemas operativos            | Jocelyn Miramón e Isaías Iñaki Membrilla       | [[https://youtu.be/js0G5O4S8SI][Ver aquí]] | [[./MembrillaIsaias-MiramonJocelyn/MembrillaIsaias-MiramonJocelyn-Expo.pdf][Exposición]]                                                                                      | [[MembrillaIsaias-MiramonJocelyn/resultados_encuesta.pdf][Resultados de la encuesta]], [[MembrillaIsaias-MiramonJocelyn/evaluacion.org][Evaluación global]] |
-  | 2025.04.08 | Desduplicación                                                                                | Valentina Domínguez                            | [[https://youtu.be/XZtdGrWuafs][Ver aquí]] | [[./DominguezValentina/DominguezValentina_Doc.pdf][Documento]], [[./DominguezValentina/DominguezValentina_Presentacion.pptx][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/111781?lang=es-MX][Evaluación de los compañeros]]                 |
-  | 2025.04.08 | Pacman: El motor de gestión de software en Arch Linux                                         | Andrea Saldaña y Emiliano Salgado              | [[https://youtu.be/HawGN4uj9bM][Ver aquí]] | [[./SaldañaAndrea-SalgadoRoman/Pacman_Exposicion_Saldaña_Salgado.pdf][Documento]], [[./SaldañaAndrea-SalgadoRoman/Presentación_Pacman_ArchLinux.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/835743?lang=es-MX][Evaluación de los compañeros]]                 |
-  | 2025.04.08 | Manejo de recursos en la consola NES                                                          | Alfonso Rodríguez y Emilia Macarena Arriaga    | [[https://youtu.be/TFA06HB7x40][Ver aquí]] | [[./RodríguezAlfonso-ArriagaEmilia/DocumentoSISTOP_Arriaga_Zuluaga.pdf][Documento]], [[./RodríguezAlfonso-ArriagaEmilia/SISTOP_ManejoDeRecursosEnLosVideoJuegosDe8bits.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/523349?lang=es-MX][Evaluación de los compañeros]]                 |
+  | 2025.04.08 | Desduplicación                                                                                | Valentina Domínguez                            | [[https://youtu.be/XZtdGrWuafs][Ver aquí]] | [[./DominguezValentina/DominguezValentina_Doc.pdf][Documento]], [[./DominguezValentina/DominguezValentina_Presentacion.pptx][Presentación]]                                                                         | [[./DominguezValentina/resultados_encuesta.pdf][Resultados de la encuesta]], [[./DominguezValentina/evaluacion.org][Evaluación global]] |
+  | 2025.04.08 | Pacman: El motor de gestión de software en Arch Linux                                         | Andrea Saldaña y Emiliano Salgado              | [[https://youtu.be/HawGN4uj9bM][Ver aquí]] | [[./SaldañaAndrea-SalgadoRoman/Pacman_Exposicion_Saldaña_Salgado.pdf][Documento]], [[./SaldañaAndrea-SalgadoRoman/Presentación_Pacman_ArchLinux.pdf][Presentación]]                                                                         | [[./SaldañaAndrea-SalgadoRoman/resultados_encuesta.pdf][Resultados de la encuesta]], [[./SaldañaAndrea-SalgadoRoman/evaluacion.org][Evaluación global]] |
+  | 2025.04.08 | Manejo de recursos en la consola NES                                                          | Alfonso Rodríguez y Emilia Macarena Arriaga    | [[https://youtu.be/TFA06HB7x40][Ver aquí]] | [[./RodríguezAlfonso-ArriagaEmilia/DocumentoSISTOP_Arriaga_Zuluaga.pdf][Documento]], [[./RodríguezAlfonso-ArriagaEmilia/SISTOP_ManejoDeRecursosEnLosVideoJuegosDe8bits.pdf][Presentación]]                                                                         | [[./RodríguezAlfonso-ArriagaEmilia/resultados_encuesta.pdf][Resultados de la encuesta]], [[./RodríguezAlfonso-ArriagaEmilia/evaluacion.org][Evaluación global]] |
   | 2025.04.14 | /Vacaciones de Semana Santa/                                                                  |                                                |          |                                                                                                 |                                              |
-  | 2025.04.21 | Unix y su papel en la historia de los Sistemas Operativos                                     | Alan Acosta y José Ángel Rubio                 |          |                                                                                                 |                                              |
-  | 2025.04.21 | Optimizaciones de proceso operativos con inteligencia artificial                              | María Fernanda Ayala y Elizabeth Portilla      |          |                                                                                                 |                                              |
-  | 2025.04.21 | TempleOS: Las implicaciones de un sistema operativo operando en el anillo 0 de protección     | Barvara Juárez y Jesus Talonia                 |          |                                                                                                 |                                              |
+  | 2025.04.21 | Unix y su papel en la historia de los Sistemas Operativos                                     | Alan Acosta y José Ángel Rubio                 | [[https://youtu.be/L2jatt2uY18][Ver aquí]] | [[./AcostaAlan-RubioAngel/Exposicion-SO-AcostaAlanyRubioAngel.pdf][Documento]], [[./AcostaAlan-RubioAngel/Presentacion-UNIX.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/818655][Evaluación de los compañeros]]                 |
+  | 2025.04.21 | Mecanismos para mantener la coherencia en caché                                               | María Fernanda Ayala y Elizabeth Portilla      |          | [[./AyalaMaria-PortillaElizabeth/Documento_presentacion.pdf][Documento]]                                                                                       | [[https://encuestas.iiec.unam.mx/494357][Evaluación de los compañeros]]                 |
+  | 2025.04.21 | TempleOS: Las implicaciones de un sistema operativo operando en el anillo 0 de protección     | Barvara Juárez y Jesus Talonia                 | [[https://youtu.be/2pWFz7PlSrw][Ver aquí]] | [[./JuarezBarvara_TaloniaJesus/TempleOS-Escrito.pdf][Documento]], [[./JuarezBarvara_TaloniaJesus/TempleOS-Presentacion.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/927899][Evaluación de los compañeros]]                 |
   | 2025.04.28 | Proceso de creación de un sistema Linux embebido                                              | Luis Antonio Ugartechea y Enrique Job Calderón |          |                                                                                                 |                                              |
   | 2025.04.28 | Programación funcional                                                                        | Leonardo Mikel Cervantes y Arnau Roger Solé    |          |                                                                                                 |                                              |
   | 2025.04.28 | Sistemas operativos para la nube                                                              | Carlos Cano y Ángel Cortés                     |          |                                                                                                 |                                              |
