Presentación y video de coherencia de caché

--- a/exposiciones/README.org
+++ b/exposiciones/README.org
@@ -22,7 +22,7 @@
   | 2025.04.08 | Manejo de recursos en la consola NES                                                          | Alfonso Rodríguez y Emilia Macarena Arriaga    | [[https://youtu.be/TFA06HB7x40][Ver aquí]] | [[./RodríguezAlfonso-ArriagaEmilia/DocumentoSISTOP_Arriaga_Zuluaga.pdf][Documento]], [[./RodríguezAlfonso-ArriagaEmilia/SISTOP_ManejoDeRecursosEnLosVideoJuegosDe8bits.pdf][Presentación]]                                                                         | [[./RodríguezAlfonso-ArriagaEmilia/resultados_encuesta.pdf][Resultados de la encuesta]], [[./RodríguezAlfonso-ArriagaEmilia/evaluacion.org][Evaluación global]] |
   | 2025.04.14 | /Vacaciones de Semana Santa/                                                                  |                                                |          |                                                                                                 |                                              |
   | 2025.04.21 | Unix y su papel en la historia de los Sistemas Operativos                                     | Alan Acosta y José Ángel Rubio                 | [[https://youtu.be/L2jatt2uY18][Ver aquí]] | [[./AcostaAlan-RubioAngel/Exposicion-SO-AcostaAlanyRubioAngel.pdf][Documento]], [[./AcostaAlan-RubioAngel/Presentacion-UNIX.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/818655][Evaluación de los compañeros]]                 |
-  | 2025.04.21 | Mecanismos para mantener la coherencia en caché                                               | María Fernanda Ayala y Elizabeth Portilla      |          | [[./AyalaMaria-PortillaElizabeth/Documento_presentacion.pdf][Documento]]                                                                                       | [[https://encuestas.iiec.unam.mx/494357][Evaluación de los compañeros]]                 |
+  | 2025.04.21 | Mecanismos para mantener la coherencia en caché                                               | María Fernanda Ayala y Elizabeth Portilla      | [[https://youtu.be/FWyVcgZAISI][Ver aquí]] | [[./AyalaMaria-PortillaElizabeth/Documento_presentacion.pdf][Documento]], [[./AyalaMaria-PortillaElizabeth/PresentacionExpo_MecanismosParaMantenerLaCoherenciaEnCache.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/494357][Evaluación de los compañeros]]                 |
   | 2025.04.21 | TempleOS: Las implicaciones de un sistema operativo operando en el anillo 0 de protección     | Barvara Juárez y Jesus Talonia                 | [[https://youtu.be/2pWFz7PlSrw][Ver aquí]] | [[./JuarezBarvara_TaloniaJesus/TempleOS-Escrito.pdf][Documento]], [[./JuarezBarvara_TaloniaJesus/TempleOS-Presentacion.pdf][Presentación]]                                                                         | [[https://encuestas.iiec.unam.mx/927899][Evaluación de los compañeros]]                 |
   | 2025.04.28 | Proceso de creación de un sistema Linux embebido                                              | Luis Antonio Ugartechea y Enrique Job Calderón |          |                                                                                                 |                                              |
   | 2025.04.28 | Programación funcional                                                                        | Leonardo Mikel Cervantes y Arnau Roger Solé    |          |                                                                                                 |                                              |
